--- a/css/styles.css
+++ b/css/styles.css
@@ -26,10 +26,10 @@ a {
     background-color: var(--color-hero);
 }
 .header-logo {
-    font-family: Raleway, sans-serif;
+font-family: Raleway, sans-serif;
 font-size: 18px;
 font-weight: 700;
-line-height: 1.166; /* 116.667% */
+line-height: 1.17; /* 116.667% */
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--color-brand);
@@ -71,7 +71,6 @@ text-align: center;
 color: var(--color-hero);
 }
 .hero-button {
-font-family: Roboto;
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5; /* 150% */
@@ -81,8 +80,12 @@ border: none;
 color: var(--color-hero);
 background-color: var(--color-brand);
 }
+.hero-button:hover,
 .hero-button:focus {
     background-color: var(--color-active);
+}
+.benefit-list {
+    background-color: var(--color-hero);
 }
 .benefit-title {
     font-size: 20px;
@@ -142,17 +145,17 @@ background-color: var(--color-brand);
     background-color: var(--color-primary);
 }
 .footer-logo {
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
-    line-height: 1.16; /* 116.667% */
+    line-height: 1.17; /* 116.667% */
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--color-light);
+    color: var(--color-brand);
 }
 .footer-logo .accent{
-color: var(--color-brand);
+color: var(--color-light);
 }
 .footer-marketing {
     line-height: 1.5; /* 150% */
