--- a/css/styles.css
+++ b/css/styles.css
@@ -71,9 +71,11 @@ text-align: center;
 color: var(--color-hero);
 }
 .hero-button {
+    font-family: "Roboto", sans-serif;
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5; /* 150% */
+letter-spacing: 0.04em;
 text-align: center;
 cursor: pointer;
 border: none;
@@ -84,7 +86,7 @@ background-color: var(--color-brand);
 .hero-button:focus {
     background-color: var(--color-active);
 }
-.benefit-list li {
+.benefit-list {
     background-color: var(--color-hero);
 }
 .benefit-title {
