--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,9 @@ background-color: var(--color-brand);
     color: var(--color-secondary);
 }
 /* Team section*/
+.section-team {
+    background-color: var(--color-light);
+}
 .team-list {
     background-color: var(--color-hero);
 }
