--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,12 @@ color: var(--color-brand);
  {
     color: var(--color-active);
 }
+.contacts {
+    font-style: normal;
+}
 .contacts-link {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    font-style: normal;
     color: var(--color-secondary);
 }
 .contacts-link:hover,
